[gd_scene load_steps=15 format=4 uid="uid://5ctllddc4obb"]

[ext_resource type="PackedScene" uid="uid://b7pp5suyru2lf" path="res://scenes/breakable_element.tscn" id="1_7wdxp"]
[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_hib26"]
[ext_resource type="TileSet" uid="uid://b35s45rp0yrck" path="res://scenes/menu_tile_set.tres" id="1_jssq0"]
[ext_resource type="PackedScene" uid="uid://dn8q4o2sgxa7y" path="res://scenes/letter.tscn" id="3_1ar5g"]
[ext_resource type="Texture2D" uid="uid://7r8cut1jsvt0" path="res://assets/art/Panel.png" id="3_janoq"]
[ext_resource type="FontFile" uid="uid://bckbkknmti08k" path="res://assets/fonts/m6x11.ttf" id="5_2a3fy"]
[ext_resource type="Theme" uid="uid://fqhlidlvqsyl" path="res://assets/fonts/menu_buttons.tres" id="6_43f6x"]
[ext_resource type="Texture2D" uid="uid://da1aop1iloq0v" path="res://assets/art/StartButton.png" id="7_cyu86"]
[ext_resource type="Texture2D" uid="uid://op2bmdwt6xln" path="res://assets/art/Screw.png" id="8_yx54q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2u67"]
size = Vector2(1024, 384)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nwsea"]
size = Vector2(60, 284)

[sub_resource type="CircleShape2D" id="CircleShape2D_jk44i"]
radius = 8.0

[sub_resource type="LabelSettings" id="LabelSettings_rnshd"]
font = ExtResource("5_2a3fy")
font_size = 96
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ppfed"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_hib26")

[node name="Background" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAMAAAABAAAAAAAAAAMAAAACAAAAAAAAAAMAAAADAAAAAAAAAAMAAAAEAAAAAAAAAAMAAAAFAAAAAAAAAAMAAAAGAAAAAAAAAAMAAAAHAAAAAAAAAAMAAAAIAAAAAAAAAAMAAAAJAAAAAAAAAAMAAAAKAAAAAAAAAAMAAAALAAAAAAAAAAMAAAAMAAAAAAAAAAMAAAANAAAAAAAAAAMAAAAOAAAAAAAAAAMAAAAPAAAAAAAAAAMAAAAQAAAAAAAAAAMAAAARAAAAAAAAAAMAAAASAAAAAAAAAAMAAAATAAAAAAAAAAMAAAAUAAAAAAAAAAMAAAAVAAAAAAAAAAMAAAAWAAAAAAAAAAMAAAAXAAAAAAAAAAMAAAAYAAAAAAAAAAMAAAAZAAAAAAAAAAMAAAAaAAAAAAAAAAMAAAAbAAAAAAAAAAMAAAAcAAAAAAAAAAMAAAAdAAAAAAAAAAMAAAAeAAAAAAAAAAMAAAAfAAAAAAAAAAMAAAAgAAAAAAAAAAMAAAAhAAAAAAAAAAMAAAAiAAAAAAAAAAMAAAAjAAAAAAAAAAMAAAAjABQAAAAAAAMAAAAAABQAAAAAAAMAAAAiABQAAAAAAAMAAAAhABQAAAAAAAMAAAAgABQAAAAAAAMAAAAfABQAAAAAAAMAAAAeABQAAAAAAAMAAAAdABQAAAAAAAMAAAAcABQAAAAAAAMAAAAbABQAAAAAAAMAAAAaABQAAAAAAAMAAAAZABQAAAAAAAMAAAAYABQAAAAAAAMAAAAXABQAAAAAAAMAAAAWABQAAAAAAAMAAAAVABQAAAAAAAMAAAAUABQAAAAAAAMAAAATABQAAAAAAAMAAAASABQAAAAAAAMAAAARABQAAAAAAAMAAAAQABQAAAAAAAMAAAAPABQAAAAAAAMAAAAOABQAAAAAAAMAAAANABQAAAAAAAMAAAAMABQAAAAAAAMAAAALABQAAAAAAAMAAAAKABQAAAAAAAMAAAAJABQAAAAAAAMAAAAIABQAAAAAAAMAAAAHABQAAAAAAAMAAAAGABQAAAAAAAMAAAAFABQAAAAAAAMAAAAEABQAAAAAAAMAAAADABQAAAAAAAMAAAACABQAAAAAAAMAAAABABQAAAAAAAMAAAAAAAEAAAAAAAMAAAAAAAIAAAAAAAMAAAAAAAMAAAAAAAMAAAAAAAQAAAAAAAMAAAAAAAUAAAAAAAMAAAAAAAYAAAAAAAMAAAAAAAcAAAAAAAMAAAAAAAgAAAAAAAMAAAAAAAkAAAAAAAMAAAAAAAoAAAAAAAMAAAAAAAsAAAAAAAMAAAAAAAwAAAAAAAMAAAAAAA0AAAAAAAMAAAAAAA4AAAAAAAMAAAAAAA8AAAAAAAMAAAAAABAAAAAAAAMAAAAAABEAAAAAAAMAAAAAABIAAAAAAAMAAAAAABMAAAAAAAMAAAAjAAEAAAAAAAMAAAAjAAIAAAAAAAMAAAAjAAMAAAAAAAMAAAAjAAQAAAAAAAMAAAAjAAUAAAAAAAMAAAAjAAYAAAAAAAMAAAAjAAcAAAAAAAMAAAAjAAgAAAAAAAMAAAAjAAkAAAAAAAMAAAAjAAoAAAAAAAMAAAAjAAsAAAAAAAMAAAAjAAwAAAAAAAMAAAAjAA0AAAAAAAMAAAAjAA4AAAAAAAMAAAAjAA8AAAAAAAMAAAAjABAAAAAAAAMAAAAjABEAAAAAAAMAAAAjABIAAAAAAAMAAAAjABMAAAAAAAMAAAAMAAwAAQAAAAAAAAAMAAsAAQAAAAAAAAAMAAoAAQAAAAAAAAAMAAkAAQAAAAAAAAAMAAgAAQAAAAAAAAAMAAcAAQAAAAAAAAAMAAYAAQAAAAAAAAAMAAUAAQAAAAAAAAAMAAQAAQAAAAAAAAAMAAMAAQAAAAAAAAAMAAIAAQAAAAAAAAAMAAEAAAAAAAMAAAALAAEAAAAAAAMAAAAKAAEAAAAAAAMAAAAJAAEAAAAAAAMAAAAIAAEAAAAAAAMAAAAHAAEAAAAAAAMAAAAGAAEAAAAAAAMAAAAFAAEAAAAAAAMAAAAEAAEAAAAAAAMAAAADAAEAAAAAAAMAAAACAAEAAAAAAAMAAAABAAEAAAAAAAMAAAABAAIAAAAAAAMAAAABAAMAAAAAAAMAAAABAAQAAAAAAAMAAAABAAUAAAAAAAMAAAABAAYAAAAAAAMAAAABAAcAAAAAAAMAAAABAAgAAAAAAAMAAAABAAkAAAAAAAMAAAABAAoAAAAAAAMAAAABAAsAAAAAAAMAAAABAAwAAAAAAAMAAAABAA0AAAAAAAMAAAABAA4AAAAAAAMAAAABAA8AAAAAAAMAAAABABAAAAAAAAMAAAABABEAAAAAAAMAAAABABIAAAAAAAMAAAABABMAAAAAAAMAAAACABMAAAAAAAMAAAACABIAAAAAAAMAAAACABEAAAAAAAMAAAACABAAAAAAAAMAAAACAA8AAAAAAAMAAAACAA4AAAAAAAMAAAACAA0AAQAAAAAAAAACAAwAAQAAAAAAAAACAAsAAQAAAAAAAAACAAoAAQAAAAAAAAACAAkAAQAAAAAAAAACAAgAAQAAAAAAAAACAAcAAQAAAAAAAAACAAYAAQAAAAAAAAACAAUAAQAAAAAAAAACAAQAAQAAAAAAAAACAAMAAQAAAAAAAAACAAIAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAADAAkAAQAAAAAAAAADAAoAAQAAAAAAAAADAAsAAQAAAAAAAAADAAwAAQAAAAAAAAADAA0AAQAAAAAAAAADAA4AAAAAAAMAAAADAA8AAAAAAAMAAAADABAAAAAAAAMAAAADABEAAAAAAAMAAAADABIAAAAAAAMAAAADABMAAAAAAAMAAAAEABMAAAAAAAMAAAAEABIAAAAAAAMAAAAEABEAAAAAAAMAAAAEABAAAAAAAAMAAAAEAA8AAAAAAAMAAAAEAA4AAAAAAAMAAAAEAA0AAQAAAAAAAAAEAAwAAQAAAAAAAAAEAAsAAQAAAAAAAAAEAAoAAQAAAAAAAAAEAAkAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAIAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAQAAQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAFAAcAAQAAAAAAAAAFAAgAAQAAAAAAAAAFAAkAAQAAAAAAAAAFAAoAAQAAAAAAAAAFAAsAAQAAAAAAAAAFAAwAAQAAAAAAAAAFAA0AAQAAAAAAAAAFAA4AAAAAAAMAAAAFAA8AAAAAAAMAAAAFABAAAAAAAAMAAAAFABEAAAAAAAMAAAAFABIAAAAAAAMAAAAFABMAAAAAAAMAAAAGABMAAAAAAAMAAAAGABIAAAAAAAMAAAAGABEAAAAAAAMAAAAGABAAAAAAAAMAAAAGAA8AAAAAAAMAAAAGAA4AAAAAAAMAAAAGAA0AAQAAAAAAAAAGAAwAAQAAAAAAAAAGAAsAAQAAAAAAAAAGAAoAAQAAAAAAAAAGAAkAAQAAAAAAAAAGAAgAAQAAAAAAAAAGAAcAAQAAAAAAAAAGAAYAAQAAAAAAAAAGAAUAAQAAAAAAAAAGAAQAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAIAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAHAAcAAQAAAAAAAAAHAAgAAQAAAAAAAAAHAAkAAQAAAAAAAAAHAAoAAQAAAAAAAAAHAAsAAQAAAAAAAAAHAAwAAQAAAAAAAAAHAA0AAQAAAAAAAAAHAA4AAAAAAAMAAAAHAA8AAAAAAAMAAAAHABAAAAAAAAMAAAAHABEAAAAAAAMAAAAHABIAAAAAAAMAAAAHABMAAAAAAAMAAAAIABMAAAAAAAMAAAAIABIAAAAAAAMAAAAIABEAAAAAAAMAAAAIABAAAAAAAAMAAAAIAA8AAAAAAAMAAAAIAA4AAAAAAAMAAAAIAA0AAQAAAAAAAAAIAAwAAQAAAAAAAAAIAAsAAQAAAAAAAAAIAAoAAQAAAAAAAAAIAAkAAQAAAAAAAAAIAAgAAQAAAAAAAAAIAAcAAQAAAAAAAAAIAAYAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAIAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAcAAQAAAAAAAAAJAAgAAQAAAAAAAAAJAAkAAQAAAAAAAAAJAAoAAQAAAAAAAAAJAAsAAQAAAAAAAAAJAAwAAQAAAAAAAAAJAA0AAQAAAAAAAAAJAA4AAAAAAAMAAAAJAA8AAAAAAAMAAAAJABAAAAAAAAMAAAAJABEAAAAAAAMAAAAJABIAAAAAAAMAAAAJABMAAAAAAAMAAAAKABMAAAAAAAMAAAAKABIAAAAAAAMAAAAKABEAAAAAAAMAAAAKABAAAAAAAAMAAAAKAA8AAAAAAAMAAAAKAA4AAAAAAAMAAAAKAA0AAQAAAAAAAAAKAAwAAQAAAAAAAAAKAAsAAQAAAAAAAAAKAAoAAQAAAAAAAAAKAAkAAQAAAAAAAAAKAAgAAQAAAAAAAAAKAAcAAQAAAAAAAAAKAAYAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAQAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAIAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAALAAcAAQAAAAAAAAALAAgAAQAAAAAAAAALAAkAAQAAAAAAAAALAAoAAQAAAAAAAAALAAsAAQAAAAAAAAALAAwAAQAAAAAAAAALAA0AAQAAAAAAAAALAA4AAAAAAAMAAAALAA8AAAAAAAMAAAALABAAAAAAAAMAAAALABEAAAAAAAMAAAALABIAAAAAAAMAAAALABMAAAAAAAMAAAAMABMAAAAAAAMAAAAMABIAAAAAAAMAAAAMABEAAAAAAAMAAAAMABAAAAAAAAMAAAAMAA8AAAAAAAMAAAAMAA4AAAAAAAMAAAAMAA0AAQAAAAAAAAANAA0AAQAAAAAAAAANAAwAAQAAAAAAAAANAAsAAQAAAAAAAAANAAoAAQAAAAAAAAANAAkAAQAAAAAAAAANAAgAAQAAAAAAAAANAAcAAQAAAAAAAAANAAYAAQAAAAAAAAANAAUAAQAAAAAAAAANAAQAAQAAAAAAAAANAAMAAQAAAAAAAAANAAIAAQAAAAAAAAANAAEAAAAAAAMAAAAOAAEAAAAAAAMAAAAOAAIAAQAAAAAAAAAOAAMAAQAAAAAAAAAOAAQAAQAAAAAAAAAOAAUAAQAAAAAAAAAOAAYAAQAAAAAAAAAOAAcAAQAAAAAAAAAOAAgAAQAAAAAAAAAOAAkAAQAAAAAAAAAOAAoAAQAAAAAAAAAOAAsAAQAAAAAAAAAOAAwAAQAAAAAAAAAOAA0AAQAAAAAAAAAOAA4AAAAAAAMAAAANAA4AAAAAAAMAAAANAA8AAAAAAAMAAAANABAAAAAAAAMAAAANABEAAAAAAAMAAAANABIAAAAAAAMAAAANABMAAAAAAAMAAAAOABMAAAAAAAMAAAAOABIAAAAAAAMAAAAOABEAAAAAAAMAAAAOABAAAAAAAAMAAAAOAA8AAAAAAAMAAAAPAA8AAAAAAAMAAAAPAA4AAAAAAAMAAAAPAA0AAQAAAAAAAAAPAAwAAQAAAAAAAAAPAAsAAQAAAAAAAAAPAAoAAQAAAAAAAAAPAAkAAQAAAAAAAAAPAAgAAQAAAAAAAAAPAAcAAQAAAAAAAAAPAAYAAQAAAAAAAAAPAAUAAQAAAAAAAAAPAAQAAQAAAAAAAAAPAAMAAQAAAAAAAAAPAAIAAQAAAAAAAAAPAAEAAAAAAAMAAAAQAAEAAAAAAAMAAAAQAAIAAQAAAAAAAAAQAAMAAQAAAAAAAAAQAAQAAQAAAAAAAAAQAAUAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAcAAQAAAAAAAAAQAAgAAQAAAAAAAAAQAAkAAQAAAAAAAAAQAAoAAQAAAAAAAAAQAAsAAQAAAAAAAAAQAAwAAQAAAAAAAAAQAA0AAQAAAAAAAAAQAA4AAAAAAAMAAAAQAA8AAAAAAAMAAAAQABAAAAAAAAMAAAAPABAAAAAAAAMAAAAPABEAAAAAAAMAAAAPABIAAAAAAAMAAAAPABMAAAAAAAMAAAAQABMAAAAAAAMAAAAQABIAAAAAAAMAAAAQABEAAAAAAAMAAAARABEAAAAAAAMAAAARABAAAAAAAAMAAAARAA8AAAAAAAMAAAARAA4AAAAAAAMAAAARAA0AAQAAAAAAAAARAAwAAQAAAAAAAAARAAsAAQAAAAAAAAARAAoAAQAAAAAAAAARAAkAAQAAAAAAAAARAAgAAQAAAAAAAAARAAcAAQAAAAAAAAARAAYAAQAAAAAAAAARAAUAAQAAAAAAAAARAAQAAQAAAAAAAAARAAMAAQAAAAAAAAARAAIAAQAAAAAAAAARAAEAAAAAAAMAAAASAAEAAAAAAAMAAAASAAIAAQAAAAAAAAASAAMAAQAAAAAAAAASAAQAAQAAAAAAAAASAAUAAQAAAAAAAAASAAYAAQAAAAAAAAASAAcAAQAAAAAAAAASAAgAAQAAAAAAAAASAAkAAQAAAAAAAAASAAoAAQAAAAAAAAASAAsAAQAAAAAAAAASAAwAAQAAAAAAAAASAA0AAQAAAAAAAAASAA4AAAAAAAMAAAASAA8AAAAAAAMAAAASABAAAAAAAAMAAAASABEAAAAAAAMAAAASABIAAAAAAAMAAAARABIAAAAAAAMAAAARABMAAAAAAAMAAAASABMAAAAAAAMAAAATABMAAAAAAAMAAAATABIAAAAAAAMAAAATABEAAAAAAAMAAAATABAAAAAAAAMAAAATAA8AAAAAAAMAAAATAA4AAAAAAAMAAAATAA0AAQAAAAAAAAATAAwAAQAAAAAAAAATAAsAAQAAAAAAAAATAAoAAQAAAAAAAAATAAkAAQAAAAAAAAATAAgAAQAAAAAAAAATAAcAAQAAAAAAAAATAAYAAQAAAAAAAAATAAUAAQAAAAAAAAATAAQAAQAAAAAAAAATAAMAAQAAAAAAAAATAAIAAQAAAAAAAAATAAEAAAAAAAMAAAAUAAEAAAAAAAMAAAAUAAIAAQAAAAAAAAAUAAMAAQAAAAAAAAAUAAQAAQAAAAAAAAAUAAUAAQAAAAAAAAAUAAYAAQAAAAAAAAAUAAcAAQAAAAAAAAAUAAgAAQAAAAAAAAAUAAkAAQAAAAAAAAAUAAoAAQAAAAAAAAAUAAsAAQAAAAAAAAAUAAwAAQAAAAAAAAAUAA0AAQAAAAAAAAAUAA4AAAAAAAMAAAAUAA8AAAAAAAMAAAAUABAAAAAAAAMAAAAUABEAAAAAAAMAAAAUABIAAAAAAAMAAAAUABMAAAAAAAMAAAAVABMAAAAAAAMAAAAVABIAAAAAAAMAAAAVABEAAAAAAAMAAAAVABAAAAAAAAMAAAAVAA8AAAAAAAMAAAAVAA4AAAAAAAMAAAAVAA0AAQAAAAAAAAAVAAwAAQAAAAAAAAAVAAsAAQAAAAAAAAAVAAoAAQAAAAAAAAAVAAkAAQAAAAAAAAAVAAgAAQAAAAAAAAAVAAcAAQAAAAAAAAAVAAYAAQAAAAAAAAAVAAUAAQAAAAAAAAAVAAQAAQAAAAAAAAAVAAMAAQAAAAAAAAAVAAIAAQAAAAAAAAAVAAEAAAAAAAMAAAAWAAEAAAAAAAMAAAAWAAIAAQAAAAAAAAAWAAMAAQAAAAAAAAAWAAQAAQAAAAAAAAAWAAUAAQAAAAAAAAAWAAYAAQAAAAAAAAAWAAcAAQAAAAAAAAAWAAgAAQAAAAAAAAAWAAkAAQAAAAAAAAAWAAoAAQAAAAAAAAAWAAsAAQAAAAAAAAAWAAwAAQAAAAAAAAAWAA0AAQAAAAAAAAAWAA4AAAAAAAMAAAAWAA8AAAAAAAMAAAAWABAAAAAAAAMAAAAWABEAAAAAAAMAAAAWABIAAAAAAAMAAAAWABMAAAAAAAMAAAAXABMAAAAAAAMAAAAXABIAAAAAAAMAAAAXABEAAAAAAAMAAAAXABAAAAAAAAMAAAAXAA8AAAAAAAMAAAAXAA4AAAAAAAMAAAAXAA0AAQAAAAAAAAAXAAwAAQAAAAAAAAAXAAsAAQAAAAAAAAAXAAoAAQAAAAAAAAAXAAkAAQAAAAAAAAAXAAgAAQAAAAAAAAAXAAcAAQAAAAAAAAAXAAYAAQAAAAAAAAAXAAUAAQAAAAAAAAAXAAQAAQAAAAAAAAAXAAMAAQAAAAAAAAAXAAIAAQAAAAAAAAAXAAEAAAAAAAMAAAAYAAEAAAAAAAMAAAAYAAIAAQAAAAAAAAAYAAMAAQAAAAAAAAAYAAQAAQAAAAAAAAAYAAUAAQAAAAAAAAAYAAYAAQAAAAAAAAAYAAcAAQAAAAAAAAAYAAgAAQAAAAAAAAAYAAkAAQAAAAAAAAAYAAoAAQAAAAAAAAAYAAsAAQAAAAAAAAAYAAwAAQAAAAAAAAAYAA0AAQAAAAAAAAAYAA4AAAAAAAMAAAAYAA8AAAAAAAMAAAAYABAAAAAAAAMAAAAYABEAAAAAAAMAAAAYABIAAAAAAAMAAAAYABMAAAAAAAMAAAAZABMAAAAAAAMAAAAZABIAAAAAAAMAAAAZABEAAAAAAAMAAAAZABAAAAAAAAMAAAAZAA8AAAAAAAMAAAAZAA4AAAAAAAMAAAAZAA0AAQAAAAAAAAAZAAwAAQAAAAAAAAAZAAsAAQAAAAAAAAAZAAoAAQAAAAAAAAAZAAkAAQAAAAAAAAAZAAgAAQAAAAAAAAAZAAcAAQAAAAAAAAAZAAYAAQAAAAAAAAAZAAUAAQAAAAAAAAAZAAQAAQAAAAAAAAAZAAMAAQAAAAAAAAAZAAIAAQAAAAAAAAAZAAEAAAAAAAMAAAAaAAEAAAAAAAMAAAAaAAIAAQAAAAAAAAAaAAMAAQAAAAAAAAAaAAQAAQAAAAAAAAAaAAUAAQAAAAAAAAAaAAYAAQAAAAAAAAAaAAcAAQAAAAAAAAAaAAgAAQAAAAAAAAAaAAkAAQAAAAAAAAAaAAoAAQAAAAAAAAAaAAsAAQAAAAAAAAAaAAwAAQAAAAAAAAAaAA0AAQAAAAAAAAAaAA4AAAAAAAMAAAAaAA8AAAAAAAMAAAAaABAAAAAAAAMAAAAaABEAAAAAAAMAAAAaABIAAAAAAAMAAAAaABMAAAAAAAMAAAAbABMAAAAAAAMAAAAbABIAAAAAAAMAAAAbABEAAAAAAAMAAAAbABAAAAAAAAMAAAAbAA8AAAAAAAMAAAAbAA4AAAAAAAMAAAAbAA0AAQAAAAAAAAAbAAwAAQAAAAAAAAAbAAsAAQAAAAAAAAAbAAoAAQAAAAAAAAAbAAkAAQAAAAAAAAAbAAgAAQAAAAAAAAAbAAcAAQAAAAAAAAAbAAYAAQAAAAAAAAAbAAUAAQAAAAAAAAAbAAQAAQAAAAAAAAAbAAMAAQAAAAAAAAAbAAIAAQAAAAAAAAAbAAEAAAAAAAMAAAAcAAEAAAAAAAMAAAAcAAIAAQAAAAAAAAAcAAMAAQAAAAAAAAAcAAQAAQAAAAAAAAAcAAUAAQAAAAAAAAAcAAYAAQAAAAAAAAAcAAcAAQAAAAAAAAAcAAgAAQAAAAAAAAAcAAkAAQAAAAAAAAAcAAoAAQAAAAAAAAAcAAsAAQAAAAAAAAAcAAwAAQAAAAAAAAAcAA0AAQAAAAAAAAAcAA4AAAAAAAMAAAAcAA8AAAAAAAMAAAAcABAAAAAAAAMAAAAcABEAAAAAAAMAAAAcABIAAAAAAAMAAAAcABMAAAAAAAMAAAAdABMAAAAAAAMAAAAdABIAAAAAAAMAAAAdABEAAAAAAAMAAAAdABAAAAAAAAMAAAAdAA8AAAAAAAMAAAAdAA4AAAAAAAMAAAAdAA0AAQAAAAAAAAAdAAwAAQAAAAAAAAAdAAsAAQAAAAAAAAAdAAoAAQAAAAAAAAAdAAkAAQAAAAAAAAAdAAgAAQAAAAAAAAAdAAcAAQAAAAAAAAAdAAYAAQAAAAAAAAAdAAUAAQAAAAAAAAAdAAQAAQAAAAAAAAAdAAMAAQAAAAAAAAAdAAIAAQAAAAAAAAAdAAEAAAAAAAMAAAAeAAEAAAAAAAMAAAAeAAIAAQAAAAAAAAAeAAMAAQAAAAAAAAAeAAQAAQAAAAAAAAAeAAUAAQAAAAAAAAAeAAYAAQAAAAAAAAAeAAcAAQAAAAAAAAAeAAgAAQAAAAAAAAAeAAkAAQAAAAAAAAAeAAoAAQAAAAAAAAAeAAsAAQAAAAAAAAAeAAwAAQAAAAAAAAAeAA0AAQAAAAAAAAAeAA4AAAAAAAMAAAAeAA8AAAAAAAMAAAAeABAAAAAAAAMAAAAeABEAAAAAAAMAAAAeABIAAAAAAAMAAAAeABMAAAAAAAMAAAAfABMAAAAAAAMAAAAfABIAAAAAAAMAAAAfABEAAAAAAAMAAAAfABAAAAAAAAMAAAAfAA8AAAAAAAMAAAAfAA4AAAAAAAMAAAAfAA0AAQAAAAAAAAAfAAwAAQAAAAAAAAAfAAsAAQAAAAAAAAAfAAoAAQAAAAAAAAAfAAkAAQAAAAAAAAAfAAgAAQAAAAAAAAAfAAcAAQAAAAAAAAAfAAYAAQAAAAAAAAAfAAUAAQAAAAAAAAAfAAQAAQAAAAAAAAAfAAMAAQAAAAAAAAAfAAIAAQAAAAAAAAAfAAEAAAAAAAMAAAAgAAEAAAAAAAMAAAAgAAIAAQAAAAAAAAAgAAMAAQAAAAAAAAAgAAQAAQAAAAAAAAAgAAUAAQAAAAAAAAAgAAYAAQAAAAAAAAAgAAcAAQAAAAAAAAAgAAgAAQAAAAAAAAAgAAkAAQAAAAAAAAAgAAoAAQAAAAAAAAAgAAsAAQAAAAAAAAAgAAwAAQAAAAAAAAAgAA0AAQAAAAAAAAAgAA4AAAAAAAMAAAAgAA8AAAAAAAMAAAAgABAAAAAAAAMAAAAgABEAAAAAAAMAAAAgABIAAAAAAAMAAAAgABMAAAAAAAMAAAAhABMAAAAAAAMAAAAhABIAAAAAAAMAAAAhABEAAAAAAAMAAAAhABAAAAAAAAMAAAAhAA8AAAAAAAMAAAAhAA0AAQAAAAAAAAAhAAwAAQAAAAAAAAAhAAsAAQAAAAAAAAAhAAoAAQAAAAAAAAAhAAkAAQAAAAAAAAAhAAgAAQAAAAAAAAAhAAcAAQAAAAAAAAAhAAYAAQAAAAAAAAAhAAUAAQAAAAAAAAAhAAQAAQAAAAAAAAAhAAMAAQAAAAAAAAAhAAIAAQAAAAAAAAAhAAEAAAAAAAMAAAAiAAEAAAAAAAMAAAAiAAIAAAAAAAMAAAAiAAMAAAAAAAMAAAAiAAQAAAAAAAMAAAAiAAUAAAAAAAMAAAAiAAYAAAAAAAMAAAAiAAcAAAAAAAMAAAAiAAgAAAAAAAMAAAAiAAkAAAAAAAMAAAAiAAoAAAAAAAMAAAAiAAsAAAAAAAMAAAAiAAwAAAAAAAMAAAAiAA0AAAAAAAMAAAAiAA4AAAAAAAMAAAAiAA8AAAAAAAMAAAAiABAAAAAAAAMAAAAiABEAAAAAAAMAAAAiABIAAAAAAAMAAAAiABMAAAAAAAMAAAAhAA4AAAAAAAMAAAA=")
tile_set = ExtResource("1_jssq0")

[node name="Boarder" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAjAAAAAAAAAAAAAAAiAAAAAAAAAAAAAAAhAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAfAAAAAAAAAAAAAAAeAAAAAAAAAAAAAAAdAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAbAAAAAAAAAAAAAAAaAAAAAAAAAAAAAAAZAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAXAAAAAAAAAAAAAAAWAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAATAAAAAAAAAAAAAAASAAAAAAAAAAAAAAARAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAADAAAAAAAAAAAAAAACAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAAAAAAAAAAAAABAAAAAAAAAAAAAAABEAAAAAAAAAAAAAABIAAAAAAAAAAAAAABMAAAAAAAAAAAAAABQAAAAAAAAAAAABABQAAAAAAAAAAAACABQAAAAAAAAAAAADABQAAAAAAAAAAAAEABQAAAAAAAAAAAAFABQAAAAAAAAAAAAGABQAAAAAAAAAAAAHABQAAAAAAAAAAAAIABQAAAAAAAAAAAAJABQAAAAAAAAAAAAKABQAAAAAAAAAAAALABQAAAAAAAAAAAAMABQAAAAAAAAAAAANABQAAAAAAAAAAAAOABQAAAAAAAAAAAAPABQAAAAAAAAAAAAQABQAAAAAAAAAAAARABQAAAAAAAAAAAASABQAAAAAAAAAAAATABQAAAAAAAAAAAAUABQAAAAAAAAAAAAVABQAAAAAAAAAAAAWABQAAAAAAAAAAAAXABQAAAAAAAAAAAAYABQAAAAAAAAAAAAZABQAAAAAAAAAAAAaABQAAAAAAAAAAAAbABQAAAAAAAAAAAAcABQAAAAAAAAAAAAdABQAAAAAAAAAAAAeABQAAAAAAAAAAAAfABQAAAAAAAAAAAAgABQAAAAAAAAAAAAhABQAAAAAAAAAAAAiABQAAAAAAAAAAAAjABQAAAAAAAAAAAAjABMAAAAAAAAAAAAjABIAAAAAAAAAAAAjABEAAAAAAAAAAAAjABAAAAAAAAAAAAAjAA8AAAAAAAAAAAAjAA4AAAAAAAAAAAAjAA0AAAAAAAAAAAAjAAwAAAAAAAAAAAAjAAsAAAAAAAAAAAAjAAoAAAAAAAAAAAAjAAkAAAAAAAAAAAAjAAgAAAAAAAAAAAAjAAcAAAAAAAAAAAAjAAYAAAAAAAAAAAAjAAUAAAAAAAAAAAAjAAQAAAAAAAAAAAAjAAMAAAAAAAAAAAAjAAIAAAAAAAAAAAAjAAEAAAAAAAAAAAABABMAAAAAAAAAAAACABMAAAAAAAAAAAADABMAAAAAAAAAAAAEABMAAAAAAAAAAAAFABMAAAAAAAAAAAAGABMAAAAAAAAAAAAHABMAAAAAAAAAAAAIABMAAAAAAAAAAAAJABMAAAAAAAAAAAAKABMAAAAAAAAAAAALABMAAAAAAAAAAAAMABMAAAAAAAAAAAANABMAAAAAAAAAAAAOABMAAAAAAAAAAAAPABMAAAAAAAAAAAAQABMAAAAAAAAAAAARABMAAAAAAAAAAAASABMAAAAAAAAAAAATABMAAAAAAAAAAAAUABMAAAAAAAAAAAAVABMAAAAAAAAAAAAWABMAAAAAAAAAAAAXABMAAAAAAAAAAAAYABMAAAAAAAAAAAAZABMAAAAAAAAAAAAaABMAAAAAAAAAAAAbABMAAAAAAAAAAAAcABMAAAAAAAAAAAAdABMAAAAAAAAAAAAeABMAAAAAAAAAAAAfABMAAAAAAAAAAAAgABMAAAAAAAAAAAAhABMAAAAAAAAAAAAiABMAAAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD//woAAAAAAAAAAAD//wsAAAAAAAAAAAD//wwAAAAAAAAAAAD//w0AAAAAAAAAAAD//w4AAAAAAAAAAAD//w8AAAAAAAAAAAD//xAAAAAAAAAAAAD//xEAAAAAAAAAAAD//xIAAAAAAAAAAAD//xMAAAAAAAAAAAD//xQAAAAAAAAAAAD//xUAAAAAAAAAAAAkABUAAAAAAAAAAAAjABUAAAAAAAAAAAAiABUAAAAAAAAAAAAhABUAAAAAAAAAAAAgABUAAAAAAAAAAAAfABUAAAAAAAAAAAAeABUAAAAAAAAAAAAdABUAAAAAAAAAAAAcABUAAAAAAAAAAAAbABUAAAAAAAAAAAAaABUAAAAAAAAAAAAZABUAAAAAAAAAAAAYABUAAAAAAAAAAAAXABUAAAAAAAAAAAAWABUAAAAAAAAAAAAVABUAAAAAAAAAAAAUABUAAAAAAAAAAAATABUAAAAAAAAAAAASABUAAAAAAAAAAAARABUAAAAAAAAAAAAQABUAAAAAAAAAAAAPABUAAAAAAAAAAAAOABUAAAAAAAAAAAANABUAAAAAAAAAAAAMABUAAAAAAAAAAAALABUAAAAAAAAAAAAKABUAAAAAAAAAAAAJABUAAAAAAAAAAAAIABUAAAAAAAAAAAAHABUAAAAAAAAAAAAGABUAAAAAAAAAAAAFABUAAAAAAAAAAAAEABUAAAAAAAAAAAADABUAAAAAAAAAAAACABUAAAAAAAAAAAABABUAAAAAAAAAAAAAABUAAAAAAAAAAAAkABQAAAAAAAAAAAAkABMAAAAAAAAAAAAkABIAAAAAAAAAAAAkABEAAAAAAAAAAAAkABAAAAAAAAAAAAAkAA8AAAAAAAAAAAAkAA4AAAAAAAAAAAAkAA0AAAAAAAAAAAAkAAwAAAAAAAAAAAAkAAsAAAAAAAAAAAAkAAoAAAAAAAAAAAAkAAkAAAAAAAAAAAAkAAgAAAAAAAAAAAAkAAcAAAAAAAAAAAAkAAYAAAAAAAAAAAAkAAUAAAAAAAAAAAAkAAQAAAAAAAAAAAAkAAMAAAAAAAAAAAAkAAIAAAAAAAAAAAAkAAEAAAAAAAAAAAAkAAAAAAAAAAAAAAAkAP//AAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAAAAAAAAAAFAP//AAAAAAAAAAAGAP//AAAAAAAAAAAHAP//AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAKAP//AAAAAAAAAAALAP//AAAAAAAAAAAMAP//AAAAAAAAAAANAP//AAAAAAAAAAAOAP//AAAAAAAAAAAPAP//AAAAAAAAAAAQAP//AAAAAAAAAAARAP//AAAAAAAAAAASAP//AAAAAAAAAAATAP//AAAAAAAAAAAUAP//AAAAAAAAAAAVAP//AAAAAAAAAAAWAP//AAAAAAAAAAAXAP//AAAAAAAAAAAYAP//AAAAAAAAAAAZAP//AAAAAAAAAAAaAP//AAAAAAAAAAAbAP//AAAAAAAAAAAcAP//AAAAAAAAAAAdAP//AAAAAAAAAAAeAP//AAAAAAAAAAAfAP//AAAAAAAAAAAgAP//AAAAAAAAAAAhAP//AAAAAAAAAAAiAP//AAAAAAAAAAAjAP//AAAAAAAAAAA=")
tile_set = ExtResource("1_jssq0")

[node name="InteractiveElements" type="Node2D" parent="."]

[node name="Panel" parent="InteractiveElements" instance=ExtResource("1_7wdxp")]
collision_layer = 2

[node name="Sprite2D" type="Sprite2D" parent="InteractiveElements/Panel"]
position = Vector2(576, 256)
texture = ExtResource("3_janoq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveElements/Panel"]
position = Vector2(576, 256)
shape = SubResource("RectangleShape2D_p2u67")

[node name="StartButton" parent="InteractiveElements" instance=ExtResource("1_7wdxp")]
position = Vector2(576, 368)
collision_layer = 2
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="InteractiveElements/StartButton"]
texture = ExtResource("7_cyu86")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveElements/StartButton"]
position = Vector2(-7.62939e-06, 1.43051e-05)
rotation = 1.57079
shape = SubResource("RectangleShape2D_nwsea")

[node name="Screw1" parent="InteractiveElements" instance=ExtResource("1_7wdxp")]
position = Vector2(88, 88)
collision_layer = 2
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="InteractiveElements/Screw1"]
texture = ExtResource("8_yx54q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveElements/Screw1"]
shape = SubResource("CircleShape2D_jk44i")

[node name="Screw2" parent="InteractiveElements" instance=ExtResource("1_7wdxp")]
position = Vector2(1064, 88)
collision_layer = 2
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="InteractiveElements/Screw2"]
texture = ExtResource("8_yx54q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveElements/Screw2"]
shape = SubResource("CircleShape2D_jk44i")

[node name="Screw3" parent="InteractiveElements" instance=ExtResource("1_7wdxp")]
position = Vector2(88, 424)
collision_layer = 2
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="InteractiveElements/Screw3"]
texture = ExtResource("8_yx54q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveElements/Screw3"]
shape = SubResource("CircleShape2D_jk44i")

[node name="Screw4" parent="InteractiveElements" instance=ExtResource("1_7wdxp")]
position = Vector2(1064, 424)
collision_layer = 2
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="InteractiveElements/Screw4"]
texture = ExtResource("8_yx54q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveElements/Screw4"]
shape = SubResource("CircleShape2D_jk44i")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1152.0
offset_bottom = 170.0
theme_override_constants/margin_top = 175

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "<JUST LET ME PLAY>"
label_settings = SubResource("LabelSettings_rnshd")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 208

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("6_43f6x")
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/font_focus_color = Color(0.615686, 0.615686, 0.615686, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_ppfed")
text = "SETTINGS"
flat = true

[node name="Letters" type="Node2D" parent="."]

[node name="S" parent="Letters" instance=ExtResource("3_1ar5g")]
position = Vector2(438, 579)
rotation = -0.0150613

[node name="T1" parent="Letters" instance=ExtResource("3_1ar5g")]
position = Vector2(472, 574)
rotation = -0.0150613
letter_type = 1

[node name="A1" parent="Letters" instance=ExtResource("3_1ar5g")]
position = Vector2(508, 571)
rotation = -0.0150613
letter_type = 2

[node name="R" parent="Letters" instance=ExtResource("3_1ar5g")]
position = Vector2(539, 569)
rotation = -0.0150613
letter_type = 3

[node name="T2" parent="Letters" instance=ExtResource("3_1ar5g")]
position = Vector2(567, 573)
rotation = -0.0150613
letter_type = 1

[node name="G" parent="Letters" instance=ExtResource("3_1ar5g")]
position = Vector2(615, 575)
rotation = -0.0150613
letter_type = 4

[node name="A2" parent="Letters" instance=ExtResource("3_1ar5g")]
position = Vector2(652, 572)
rotation = -0.0150613
letter_type = 2

[node name="M" parent="Letters" instance=ExtResource("3_1ar5g")]
position = Vector2(689, 573)
rotation = -0.0150613
letter_type = 5

[node name="E" parent="Letters" instance=ExtResource("3_1ar5g")]
position = Vector2(716, 573)
rotation = -0.0150613
letter_type = 6

[node name="CreditContainer" type="MarginContainer" parent="."]
offset_left = 760.0
offset_top = 572.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="Credit" type="Label" parent="CreditContainer"]
layout_mode = 2
theme = ExtResource("6_43f6x")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Created by @QuietLantern"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="click" from="InteractiveElements/StartButton" to="." method="_on_start_button_click"]
[connection signal="smash" from="InteractiveElements/StartButton" to="." method="_on_start_button_smash"]
[connection signal="click" from="InteractiveElements/Screw1" to="." method="_on_screw_1_click"]
[connection signal="click" from="InteractiveElements/Screw2" to="." method="_on_screw_2_click"]
[connection signal="click" from="InteractiveElements/Screw3" to="." method="_on_screw_3_click"]
[connection signal="click" from="InteractiveElements/Screw4" to="." method="_on_screw_4_click"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/CenterContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
